<resources>
    <!--<string name="app_name">长临高速机电工程</string>
    <string name="app_title">长临高速机电工程项目部</string>-->
    <string name="app_name">太原东二环高速公路</string>
    <string name="app_title">太原东二环高速公路</string>
    <string name="not_network">当前无任何可用网络，请链接网络后重试！</string>
    <string name="person_setting">个人设置</string>
    <string name="contractor">承包商</string>
    <string name="owner">业主</string>
    <string name="supervision">监理</string>
    <string name="to_upload_photos">待上传照片</string>
    <string name="level_one">一级</string>
    <string name="show_photo">图片信息</string>
    <string name="up_load">上传</string>
    <string name="choice_type">选择分类</string>
    <string name="server_exception">服务器异常！</string>
    <string name="get_data_exception">获取数据失败！</string>
    <string name="upload_context">文件上传中…</string>
    <string name="picture_source">图片来源</string>
    <string name="photo_graph">拍照</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="up_load_now">立即上传</string>
    <string name="temporarily_reserved">暂时保留</string>
    <string name="search_condition">请输入检索条件</string>
    <string name="file_name">工程描述:</string>
    <string name="file_description">工序描述:</string>
    <string name="input_file_name">请输入文件名称</string>
    <string name="input_file_description">请描述文件</string>
    <string name="query">确认</string>
    <string name="queryPhoto">确认拍照</string>
    <string name="file_info">描述文件</string>
    <string name="data_error">服务器返回数据有误!</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="login">登录</string>
    <string name="weChat_login">微信登录</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_user_password">请输入密码</string>
    <string name="login_error">用户名或密码不正确!</string>
    <string name="version_check">版本检查</string>
    <string name="update_password">密码修改</string>
    <string name="sign_out">注销</string>
    <string name="old_password">原始密码</string>
    <string name="new_password">新密码</string>
    <string name="query_password">确认密码</string>
    <string name="old_pswd_can_not_be_empty">原始密码不能为空!</string>
    <string name="new_pswd_can_not_be_empty">新密码不能为空!</string>
    <string name="two_pswd_are_not_consistent">两次输入密码不一致!</string>
    <string name="new_pswd_can_not_be_the_same_as_old_pswd">新密码不能与原始密码一样!</string>
    <string name="edit_node">节点编辑</string>
    <string name="add_node">增加节点</string>
    <string name="delete_node">删除节点</string>
    <string name="update_node">修改节点名称</string>
    <string name="please_input_node_name">请输入节点名称</string>
    <string name="node_name_can_not_be_empty">节点名称不能为空!</string>
    <string name="reported">上报</string>
    <string name="query_reported">确认上报</string>
    <string name="cancel_reported">取消上报</string>
    <string name="auditors">审核人员</string>
    <string name="json_error">服务器异常！</string>
    <string name="download_context">文件下载</string>
    <string name="security">安全</string>
    <string name="quality">质量</string>
    <string name="use_help">使用帮助</string>
    <string name="department">部门：</string>
    <string name="real_name">姓名：</string>
    <string name="clean_up_caching">清理缓存</string>
    <string name="msg">消息</string>
    <string name="application">应用</string>
    <string name="project">项目</string>
    <string name="friends">联系人</string>
    <string name="me">个人中心</string>
    <string name="bim_platform">BIM平台</string>
    <string name="mail_list">通讯录</string>
    <string name="qr_code">二维码扫描</string>
    <string name="qr_code_generate">二维码生成</string>
    <string name="process_inspection">工序检查</string>
    <string name="hidden_danger">安全隐患</string>
    <string name="video_surveillance">视频监控</string>
    <string name="group_management">班组管理</string>
    <string name="drawing_inquiry">图纸查询</string>
    <string name="standard_query">规范查询</string>
    <string name="progress_plan">进度计划</string>
    <string name="first_batch">首件批报</string>
    <string name="online_examination">在线考试</string>
    <string name="labor_competition">劳动竞赛</string>
    <string name="experimental_management">品质工程评价</string>
    <string name="attendance_card">考勤打卡</string>
    <string name="process_report">工序报表</string>
    <string name="no">NO.</string>
    <string name="working_name">工序名称：</string>
    <string name="photos_num">照片数量</string>
    <string name="photosNum">照片数量：</string>
    <string name="photographers">拍照者</string>
    <string name="validator">确认者</string>
    <string name="status">状态</string>
    <string name="save">保存</string>
    <string name="local_save">本地保存</string>
    <string name="localSave">保存照片至本地</string>
    <string name="measured_record">实测记录</string>
    <string name="temporary_photo">暂存照片</string>
    <string name="working_no">工序编号：</string>
    <string name="entry_time">录入时间</string>
    <string name="distance_angle">距离角度：</string>
    <string name="distanceAngle">距离及角度：</string>
    <string name="location">拍照位置：</string>
    <string name="locationPosition">参考位置</string>
    <string name="take_photo_num">拍照数量：</string>
    <string name="take_photo_requirement">拍照要求</string>
    <string name="takePhotoRequirement">拍照要求：</string>
    <string name="fixedPoint">层厚定\n点位置</string>
    <string name="saveFixedPoint">保存层厚定点位置</string>
    <string name="photos">照片\n长按删除</string>
    <string name="working_position">工序部位</string>
    <string name="standard">标准</string>
    <string name="construction_date">施工时间</string>
    <string name="check_date">检查时间：</string>
    <string name="check">检查</string>
    <string name="regulations">规定</string>
    <string name="allow">允许</string>
    <string name="testing_result">检测结果</string>
    <string name="value">值</string>
    <string name="deviation">偏差</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="submit_yun">上传云端</string>
    <string name="reject_photo">驳回原因：</string>
    <string name="reject">驳回</string>
    <string name="examine">审核</string>
    <string name="elevation">现标高</string>
    <string name="PositionOfPileNumber">桩号位置</string>
    <string name="please_input_remark">请输入</string>
    <string name="no_msg">暂无消息！</string>
    <string name="no_data">未选中任何人员！</string>
    <string name="local_msg">系统消息</string>
    <string name="personal_msg">个人消息</string>
    <string name="same_day">各分部历史完成工序查询</string>
    <string name="working_info">截止目前各分部工序完成总统计图</string>
    <string name="search">工序查询</string>
    <string name="beginDate">开始时间</string>
    <string name="endDate">结束时间</string>
    <string name="input_working_name">请输入工序名称</string>
    <string name="commonly_used">常用工序</string>
    <string name="all">全部工序</string>
    <string name="company_name">山西路桥集团  太原东二环高速有限公司</string>
    <string name="already_select">已选择人员</string>
</resources>
