<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:orientation="vertical"
        app:layout_heightPercent="50%h"
        app:layout_widthPercent="90%w">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingLeft="@dimen/ten_dp"
            android:text="@string/edit_node"
            android:textSize="@dimen/twenty_sp" />

        <TextView
            android:id="@+id/txtAddNode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/one_dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="left|center"
            android:paddingLeft="@dimen/ten_dp"
            android:text="@string/add_node"
            android:textSize="@dimen/twenty_sp" />

        <TextView
            android:id="@+id/txtDeleteNode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/one_dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="left|center"
            android:paddingLeft="@dimen/ten_dp"
            android:text="@string/delete_node"
            android:textSize="@dimen/twenty_sp" />

        <TextView
            android:id="@+id/txtUpDateNode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/one_dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="left|center"
            android:paddingLeft="@dimen/ten_dp"
            android:text="@string/update_node"
            android:textSize="@dimen/twenty_sp" />
    </LinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>