<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/prompt_dialog_bg"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_heightPercent="70%h"
        app:layout_widthPercent="101%w">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/prompt_dialog_reminder_bg"
            android:padding="1dp"
            app:layout_heightPercent="25%">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/file_info"
                android:paddingLeft="10dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_heightPercent="45%">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_weight="1"
                android:padding="1dp">

                <TextView
                    android:id="@+id/txtFileName"
                    android:layout_width="@dimen/one_hundred_dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/file_name"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/edtFileName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/txtFileName"
                    android:background="@drawable/search_bg"
                    android:gravity="left|center"
                    android:hint="@string/input_file_name"
                    android:paddingLeft="@dimen/ten_dp"
                    android:textSize="@dimen/twenty_sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="1dp">

                <TextView
                    android:id="@+id/txtFileDescription"
                    android:layout_width="@dimen/one_hundred_dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/file_description"
                    android:textSize="@dimen/twenty_sp" />

                <EditText
                    android:id="@+id/edtFileDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/txtFileDescription"
                    android:background="@drawable/search_bg"
                    android:gravity="left|center"
                    android:hint="@string/input_file_description"
                    android:paddingLeft="@dimen/ten_dp"
                    android:textSize="@dimen/twenty_sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_heightPercent="30%">



            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@drawable/btn_yellow"
                android:text="@string/temporarily_reserved"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_sp" />

            <Button
                android:id="@+id/btnQuery"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@drawable/btn_yellow"
                android:text="@string/up_load_now"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_sp" />
        </LinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>