<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.sx.quality.activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/one_hundred_dp"
        android:layout_height="@dimen/one_hundred_dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo"
        app:layout_marginTopPercent="15%" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_hundred_dp"
        android:layout_marginTop="@dimen/thirty"
        android:background="@drawable/login_user_info"
        android:orientation="vertical"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%">

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/user_name"
            android:inputType="text"
            android:paddingLeft="@dimen/ten_dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="@dimen/twenty_sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_dp"
            android:background="#ECEDF1" />

        <EditText
            android:id="@+id/edtUserPassWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/ten_dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="@dimen/twenty_sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/thirty"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_sp"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%" />


    <Button
        android:id="@+id/btnWeChatLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/thirty"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/weChat_login"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_sp"
        android:visibility="gone"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%" />
</com.zhy.android.percent.support.PercentLinearLayout>
