<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/prompt_dialog_bg"
    android:orientation="vertical" >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="50%h"
        app:layout_widthPercent="90%w"
        android:background="@null"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="20%"
            android:background="@color/prompt_dialog_reminder_bg"
            android:padding="1dp" >

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/picture_source"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="50%"
            android:background="@color/white" >

            <TextView
                android:id="@+id/txtPhotograph"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/view"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/photo_graph"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_centerVertical="true"
                android:background="@color/dark_grey" />

            <TextView
                android:id="@+id/txtAlbum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/view"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/album"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="30%"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_yellow"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/fourteen_sp" />
        </LinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>